@@ -57,6 +57,13 @@ memoryLeft = "64"
 ; measurement is seconds.
 maxRuntime = "60"
 
+; When you are using the scope analysis, kreXX will analyse everything that can
+; be reachtd from the point where kreXX was callen in the code. When coming from
+; the $this environment, all protected and most private values / methods are
+; reachable, and kreXX will take this into account.
+useScopeAnalysis = "true"
+; useScopeAnalysis = "false"
+
 ; ------------------------------------------------------------------------------
 [properties]
 ; kreXX can poll a lot of info. Depending on your needs, these might be a little
