@@ -65,6 +65,7 @@ class Help
         'maxRuntime' => 'kreXX checks during the analysis how much time has elapsed since start. Here you can adjust the amount where it will trigger an emergency break.<br />Unit of measurement is seconds.',
         'analyseProtectedMethods' => 'Here you can toggle if kreXX shall analyse the protected methods of a class. Of cause, they will only be analysed if kreXX is analysing class methods at all.',
         'analysePrivateMethods' => 'Here you can toggle if kreXX shall analyse the private methods of a class. Of cause, they will only be analysed if kreXX is analysing class methods at all.',
+        'useScopeAnalysis' => 'Shall kreXX analyse all reachable class properties and methods? If set to "TRUE", the default configuration for private and protected stuff is overwritten, in case that value is reachable.',
         '_getProperties' => 'TYPO3 debug function.<br />It takes the properties directly from the model, ignoring the getter function.<br />If the getter method is used to compute this value, the values from this function may be inaccurate.',
         'php7' => "It looks like you are using PHP7.\r\nFatal errors got removed in PHP7, meaning that they are now catchable like normal errors.",
         'php7yellow' => 'The fatal error handler does not work with PHP7!',
@@ -91,6 +92,7 @@ class Help
         'configErrorTraceWarnings' => 'Wrong configuration for: "errorHandling => traceWarnings"! Expected boolean. The configured setting was not applied!',
         'configErrorTraceNotices' => 'Wrong configuration for: "errorHandling => traceNotices"! Expected boolean. The configured setting was not applied!',
         'configErrorRegisterAuto' => 'Wrong configuration for: "backtraceAndError => registerAutomatically"! Expected boolean. The configured setting was not applied!',
+        'configErrorUseScopeAnalysis' => 'Wrong configuration for: "runtime => useScopeAnalysis"! Expected boolean. The configured setting was not applied!',
         'configErrorPhp7' => 'Wrong configuration for: "backtraceAndError => registerAutomatically"! Fatal errors got removed in PHP 7. The handler will not work here!',
         'maxCallReached' => 'Maximum call-level reached. This is the last analysis for this request. To increase this value, please edit:<br />runtime => maxCall.',
         'noSourceAvailable' => 'No sourcecode available. Maybe this was an internal callback (call_user_func for example)?',
